fixed btn-primary alignment in employee modal

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,9 +8,6 @@ body {
 .starter-template h1 {
   font-size: 63px;
 }
-.btn-primary {
-	margin-top: 20px;
-}
 .divider {
 	width: 5px;
 	height: auto;
